<resources>
    <string name="app_name">ApolloFeedback</string>
    <string name="label_offers_now">offers now</string>
    <string name="label_skip">skip</string>
    <string name="label_items_payment">items / payment</string>
    <string name="label_advertisement">Advertisement</string>
    <string name="label_items_in_your_cart">items\nin your cart</string>
    <string name="label_rupee_symbol">\u20B9</string>
    <string name="label_continue_npayment">continue\npayment</string>
    <string name="label_amont_nsaved">amount\nsaved</string>
    <string name="label_final_npayment">final\npayment</string>
    <string name="label_poor">POOR</string>
    <string name="label_payment_sucessfull">payment sucessfull</string>
    <string name="label_member">member</string>
    <string name="label_please_rate_your_buying_experience">Please rate your buying experience</string>
    <string name="label_fair">FAIR</string>
    <string name="label_average">AVERAGE</string>
    <string name="label_happy">HAPPY</string>
    <string name="label_excellent">EXCELLENT</string>
    <string name="label_thank_you_for_your_feedback">Thank You for your Feedback</string>
    <string name="price_format">%,.2f</string>
    <string name="label_redeem_npoints">redeem\npoints</string>
    <string name="label_bill_nvalue">bill\nvalue</string>
    <string name="label_dc_code">DC Code</string>
    <!--    <string name="label_frequently_bought">Frequently Bought (%1$s)</string>-->
    <string name="label_frequently_bought">Frequently Bought</string>
    <string name="label_scan_prescription">Scan Prescription</string>
    <string name="label_insert_your_prescriptions">Insert Your Prescriptions</string>
    <string name="label_your_scanned_prescriptions">Your Scanned Prescriptions</string>
    <string name="label_scan_nagain">Scan\nagain</string>
    <string name="label_yes">Yes</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_store_name">Store Name</string>
    <string name="label_permission_denied">Denied</string>
    <string name="label_test">Test</string>
    <string name="label_preview">Preview</string>
    <string name="label_available_credits">Available Credits:</string>
    <string name="label_camera_setup">Camera Setup</string>
    <string name="label_built_in_camera">Built-in Camera</string>
    <string name="label_webcam">Webcam</string>
    <string name="stringcustomer_voice_feedback">Customer Voice Feedback</string>
    <string name="stringrecording_starts">Recording starts @</string>
    <string name="stringsec">Sec</string>
    <string name="string_customer_voice_feedback">Customer\nVoice Feedback</string>
    <string name="stringrecording">Recording</string>
    <string name="stringsubmit">SUBMIT</string>
    <string name="label_voice_record_calibration">Voice Record Calibration</string>
    <string name="label_voice_record_key">Voice Record Key:</string>


</resources>