<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_bg">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen15dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="@dimen/dimen50dp"
                        android:layout_height="@dimen/dimen50dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_apollo_circle_logo" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen10dp"
                        android:layout_marginLeft="@dimen/dimen10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_bold"
                            android:text="@string/label_items_payment"
                            android:textAllCaps="true"
                            android:textColor="@color/color_white"
                            android:textSize="@dimen/dimen20sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="Nagaraju.C"
                            android:textColor="@color/color_white"
                            android:textSize="@dimen/dimen16sp" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen65dp"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:layout_marginEnd="@dimen/dimen65dp"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="@dimen/dimen0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen5dp"
                        android:layout_weight=".5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/label_advertisement"
                            android:textColor="@color/color_white"
                            android:textSize="@dimen/dimen15sp" />

                        <ImageView
                            android:id="@+id/advertisement_one"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen200dp"
                            android:layout_marginTop="@dimen/dimen5dp"
                            android:contentDescription="@string/app_name"
                            android:scaleType="fitXY" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="@dimen/dimen0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dimen5dp"
                        android:layout_weight=".5"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins_regular"
                            android:text="@string/label_advertisement"
                            android:textColor="@color/color_white"
                            android:textSize="@dimen/dimen15sp" />

                        <ImageView
                            android:id="@+id/advertisement_two"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/dimen200dp"
                            android:layout_marginTop="@dimen/dimen5dp"
                            android:contentDescription="@string/app_name"
                            android:scaleType="fitXY" />
                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="1"
            tools:ignore="DisableBaselineAlignment">

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_weight=".4"
                android:background="@color/color_white"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/dimen5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageView
                        android:layout_width="@dimen/dimen40dp"
                        android:layout_height="@dimen/dimen40dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_cart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen10dp"
                        android:layout_marginLeft="@dimen/dimen5dp"
                        android:layout_marginTop="@dimen/dimen5dp"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:gravity="top"
                        android:text="10"
                        android:textColor="@color/color_red"
                        android:textSize="@dimen/dimen20sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen5dp"
                        android:layout_marginLeft="@dimen/dimen5dp"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:gravity="top"
                        android:text="@string/label_items_in_your_cart"
                        android:textAllCaps="true"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen5dp"
                android:layout_marginLeft="@dimen/dimen5dp"
                android:layout_weight=".2"
                android:background="@drawable/top_right_curve_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dimen5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/dimen40dp"
                        android:layout_height="@dimen/dimen40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginTop="@dimen/dimen5dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_amount" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/dimen5dp"
                        android:layout_marginLeft="@dimen/dimen5dp"
                        android:layout_marginTop="@dimen/dimen10dp"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:text="@string/label_amont_nsaved"
                        android:textAllCaps="true"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:text="@string/label_rupee_symbol"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen3dp"
                        android:layout_marginLeft="@dimen/dimen3dp"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:text="183.50"
                        android:textColor="@color/color_red" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen5dp"
                android:layout_marginLeft="@dimen/dimen5dp"
                android:layout_weight=".2"
                android:background="@drawable/top_right_curve_bg"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dimen5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/dimen40dp"
                        android:layout_height="@dimen/dimen40dp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/ic_payment" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen5dp"
                        android:layout_marginLeft="@dimen/dimen5dp"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:text="@string/label_final_npayment"
                        android:textAllCaps="true"
                        android:textColor="@color/black" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:text="@string/label_rupee_symbol"
                        android:textColor="@color/black" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen3dp"
                        android:layout_marginLeft="@dimen/dimen3dp"
                        android:fontFamily="@font/poppins_extra_bold"
                        android:text="441.50"
                        android:textColor="@color/black" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="@dimen/dimen0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/dimen5dp"
                android:layout_marginLeft="@dimen/dimen5dp"
                android:layout_weight=".2"
                android:background="@color/color_yellow"
                android:gravity="center"
                android:onClick="@{()-> callback.onClickContinuePayment()}"
                android:orientation="vertical"
                android:padding="@dimen/dimen10dp">

                <ImageView
                    android:layout_width="@dimen/dimen50dp"
                    android:layout_height="@dimen/dimen50dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_qr_code" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen10dp"
                    android:fontFamily="@font/poppins_extra_bold"
                    android:text="@string/label_continue_npayment"
                    android:textAllCaps="true"
                    android:textColor="@color/black" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <data>

        <variable
            name="callback"
            type="com.thresholdsoft.apollofeedback.ui.itemspayment.ItemsPaymentActivityCallback" />
    </data>
</layout>